<resources>
    <string name="app_name">Media Feed Player</string>

    <!-- Bottom Navigation Bar -->
    <string name="bottom_nav_title_channels">Channels</string>
    <string name="bottom_nav_title_favourites">Favourites</string>
    <string name="bottom_nav_title_more">More</string>

    <!-- New Channel Activity -->
    <string name="new_channel_actionbar_title">New Channel</string>
    <string name="new_channel_name">Channel Name</string>
    <string name="new_channel_url">Channel URL</string>
    <string name="new_channel_name_hint">Give channel a name</string>
    <string name="new_channel_url_hint">Fill in channel RSS URL</string>
    <string name="new_channel_button_save">Save</string>
    <string name="edit_channel_actionbar_title">Edit Channel</string>
    <string name="edit_channel_channel_name">New Channel Name</string>
    <string name="edit_channel_channel_url">New Channel URL</string>
    <string name="save_channel_invalid_url">Please make sure you have enter the right URL.</string>
    <string name="save_channel_empty_field">We can\'t proceed because one of the fields is empty. Please note that all fields are required.</string>

    <!-- Listings Fragment -->
    <string name="listings_actionbar_title">Videos</string>
    <string name="listings_cannot_connect_header">Opps</string>
    <string name="listings_cannot_connect">Cannot connect to \</string>
    <string name="listings_please_check">. Please double check the URL specified.</string>
    <string name="listings_go_back">Return</string>
    <string name="listings_search_button">Search</string>

    <!-- More Fragment -->
    <string name="more_actionbar_title">More</string>
    <string name="more_feedback">Feedback</string>
    <string name="more_rate">Rate us on Play Store</string>
    <string name="more_tell">Tell us your feedback</string>
    <string name="more_follow">Follow Us</string>
    <string name="more_facebook">Facebook</string>
    <string name="more_share">Share with friends</string>
    <string name="more_other">Other</string>
    <string name="more_userguide">User Guide</string>
    <string name="more_privacy">Privacy Policy</string>
    <string name="more_terms">Terms and Conditions</string>
    <string name="more_version">Version</string>

    <!-- Channel Fragment -->
    <string name="channels_backgroundview_text_headline">Nothing Here</string>
    <string name="channels_backgroundview_text_subheadline">Tap + to add some channels</string>

    <!-- Favourites Fragment -->
    <string name="favourites_backgroundview_text_headline">Nothing Here</string>
    <string name="favourites_backgroundview_text_subheadline">Start bookmarking in Channels</string>

    <!-- Channel Row View -->
    <string name="channel_row_name">Channel Name</string>
    <string name="channel_row_image">Channel Image</string>
    <string name="channel_row_edit">Edit</string>
    <string name="channel_row_delete">Delete</string>

    <!-- Listing Row View -->
    <string name="listing_row_name">Video Title</string>
    <string name="listing_row_image">Video Thumbnail Image</string>
    <string name="listing_row_favourite">Video Favourite Button</string>

    <!-- Video Player Activity -->
    <string name="videoplayer_title">Video Player</string>
</resources>
