<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/channels_constraintlayout"
    tools:context=".ui.channels.ChannelsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_channels_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/channels_ad_view_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/channels_ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_new_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <LinearLayout
        android:id="@+id/view_channels_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/view_channels_background_imageview"
            android:layout_width="203dp"
            android:layout_height="163dp"
            android:contentDescription="@string/channels_backgroundview_text_headline"
            android:tint="#AAE6E5E5"
            app:srcCompat="@drawable/ic_tv_black_24dp" />

        <TextView
            android:id="@+id/view_channels_background_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/channels_backgroundview_text_headline"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_channels_background_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/channels_backgroundview_text_subheadline"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_userguide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_userguide"
            android:textColor="@color/primaryColor"
            app:backgroundTint="@color/ic_launcher_background" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>